unpackaged/main/default/objects/Risk_Rule_Result__c/Risk_Rule_Result__c.object-meta.xml
<CustomObject>
    <description>Child in a master-detail relationship with Consumer Risk Summary. Records of this object should represent the various rules and their results that were run for the Model summarized in the Consumer Risk Summary.</description>
    <label>Risk Rule Result</label>
    <nameField>
        <displayFormat>RiskRuleResult-{000000}</displayFormat>
        <label>Risk Rule Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Rule Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>