unpackaged/main/default/objects/Risk_Rule_Result__c/fields/Decline_Email_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Email_Reason__c</fullName>
    <description>Readable version of Decline Reason to be used on Reg B or Notice of Incomplete Application (if applicable).</description>
    <label>Decline Email Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>