unpackaged/main/default/objects/Risk_Rule_Result__c/fields/Incomplete_Application__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incomplete Application</label>
    <type>Checkbox</type>
</CustomField>