unpackaged/main/default/objects/Risk_Rule_Result__c/fields/Rule_Set__c.field-meta.xml
<CustomField>
    <fullName>Rule_Set__c</fullName>
    <description>The rule set executed in Oscilar.</description>
    <label>Rule Set</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BureauCheck</fullName>
                <label>Bureau Check</label>
            </value>
            <value>
                <fullName>NF_QB</fullName>
                <label>NF/QB</label>
            </value>
            <value>
                <fullName>Waterfall</fullName>
            </value>
            <value>
                <fullName>SBL</fullName>
            </value>
            <value>
                <fullName>NFXPRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>